--- a/PongGame/multiplayer/index.html
+++ b/PongGame/multiplayer/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WASM Game Loader</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="html/style.css">
     <link rel="preload" href="assets/pressstart2p.woff" as="font" type="font/woff" crossorigin="anonymous">
 </head>
 <body class="body-itch">
@@ -15,7 +15,7 @@
         </div>
     </div>
 
-    <script src="wasm_exec.js"></script>
+    <script src="html/wasm_exec.js"></script>
     <script>
     // Polyfill for browsers that don't support instantiateStreaming
     if (!WebAssembly.instantiateStreaming) {
@@ -26,7 +26,7 @@
     }
 
     const go = new Go();
-    WebAssembly.instantiateStreaming(fetch("main.wasm"), go.importObject).then(result => {
+    WebAssembly.instantiateStreaming(fetch("html/main.wasm"), go.importObject).then(result => {
         document.getElementById("loading-screen").style.display = "none";
         go.run(result.instance);
     }).catch(err => {
